[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pragyam"
version = "3.7.0"
description = "PRAGYAM - Institutional-Grade Portfolio Intelligence System"
authors = [
    {name = "Hemrek Capital", email = "tech@hemrekcapital.com"}
]
requires-python = ">=3.10"

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "C4"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["rmt_core", "strategies", "charts", "backdata", "backtest_engine", "strategy_selection"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
strict_optional = true
warn_redundant_casts = true
warn_return_any = true
check_untyped_defs = true